[package]
name = "aeromit"
version = "0.0.1"
authors = ["JustSimple"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.9"
mongodb = "1.1"
actix-web = "3"
dotenv = "0.15.0"
serde_json = "1.0"
env_logger = "0.8"
serde = { version = "1.0", features = ["derive"] }
