[package]
name = "aeromit"
version = "0.2.13"
authors = ["4KB4RPN136"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
actix-web = "3"
dotenv = "0.15.0"
serde_json = "1.0"
jsonwebtoken = "7"
env_logger = "0.8"
rust-argon2 = "0.8"
derive_more = "0.99"
actix-cors = "0.5.3"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.12", features = ["derive"] }
mongodb = { version = "1.1", default-features = false, features = ["async-std-runtime"] }
